Sat Feb 27 16:57:50 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: check events every time we get something from
	  readline.  That way, the new line from "return" is truly
	  synchroneous.  (it was in the wrong place for commands, even though
	  for expression this already got fixed)

Wed Feb 03 00:10:42 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: when drawing slopefield solutions, allow the graph
	  to leave window by a small fudge factor of 1/100 of the window size

	* gtkextra/gtkplot.c, gtkextra/gtkplot3d.c: add some sanity fixes to
	  fix crashes on tick calculations when the supplied data is less
	  than sane.  The tick calculation stuff is very evil and there are
	  still some crashes around when doing insensible things with 
	  graphs.

Tue Feb 02 21:42:42 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: fix compilation when gtksourceview is disabled

Tue Feb 02 13:30:44 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Allow changing variable names.  Either in the GUI
	  or using the new parameter LinePlotVariableNames.

	* help/C/gel-function-list.xml: document the new parameter

Tue Feb 02 10:32:53 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, help/C/gel-function-list.xml: Add SlopefieldTicks
	  and VectorfieldTicks, to allow setting ticks from the command line.

Wed Jan 27 00:52:13 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.h, src/genius.c, src/gnome-genius.c, src/funclib.c:
	  Implement AskButtons interactive function which asks the user to
	  select from a list of buttons.

	* src/eval.c: allow comparisons (only == and !=) with null.  We
	  really want to treat null as an empty matrix.  null is only
	  equal to null itself of course.

	* src/geniustests.txt: add tests for null comparisons

	* help/C/genius.xml, help/C/gel-function-list.xml: Document
	  AskButtons

Wed Dec 23 15:41:42 2009  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.9
