@@ -1,3 +1,8 @@
+Tue Jun 29 11:11:04 2010  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: allow changing variable names for surfaces when
+	  plotting from a dialog
+
 Sat Feb 27 16:57:50 2010  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: check events every time we get something from
